Fix spacing for placement of the footer.
Previously, it was crowding in on text.

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 /*Your Custom CSS Goes here*/
+html,
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
 h1 {
   @apply text-4xl tracking-tighter mb-3 text-center lg:text-7xl;
